# ros2_autonomous_vehicle_simulation

./: CITATION.cff  LICENSE  README.md  install.sh
install/: local_setup.sh  setup.sh
log/: latest_build
src/debug_pkg/: setup.py
src/simulation_pkg/: package.xml  setup.cfg  setup.py
src/simulation_pkg/launch/: driving_sim.launch.py  mission_sim.launch.py
src/simulation_pkg/models/hatchback/: model.config
src/simulation_pkg/models/hatchback_green/: model.config  model.sdf
src/simulation_pkg/models/hatchback_yellow/: model.config  model.sdf
src/simulation_pkg/models/lobby_window/: model.config  model.sdf
src/simulation_pkg/models/lobby_window/materials/scripts/: track.material
src/simulation_pkg/models/prius_hybrid/: model.config  model.sdf  test.sdf
src/simulation_pkg/models/prius_hybrid_ob1/: model.config  model.sdf  model1.sdf  과제_prius_hybrid_only_sonar.sdf
src/simulation_pkg/models/prius_hybrid_ob1/urdf/: 과제_prius_hybrid_only_sonar.urdf
src/simulation_pkg/models/prius_hybrid_ob2/: model.config  model.sdf
src/simulation_pkg/models/prius_hybrid_ob2/urdf/: prius.urdf  test.urdf
src/simulation_pkg/models/prius_hybrid_ob3/: model.config  model.sdf
src/simulation_pkg/models/race_track/: model.config  model.sdf
src/simulation_pkg/models/race_track/materials/scripts/: track.material
src/simulation_pkg/models/traffic/: model.config  model.sdf
src/simulation_pkg/models/traffic/meshes/: traffic.dae  traffic.stl
src/simulation_pkg/rviz/: only_sonar.rviz  robot_model.rviz
src/simulation_pkg/simulation_pkg/: __init__.py  config.py  simulation_sender_node.py  timer_based_obstacle_mover.py
src/simulation_pkg/simulation_pkg/lib/: 012_deploy_lib.py  load_ego_car_node.py  load_obstable_car_node.py  load_traffic_light_node.py
src/simulation_pkg/worlds/: lobby_with_tree.world  parking.world  track.world
(+269 files in other folders)
